# Python-Video-Annotater

./: .gitignore  README.md  hello.py  logging_config.yaml  main.py  pyproject.toml  requirements.txt
legacy/: main.py
src/: anno.py  config.py  controller.py  data.py  player.py  screens.py  setup.py
summary/: print.py  summary.txt
